Change gpr to gvpr

--- a/contrib/prune/prune.1
+++ b/contrib/prune/prune.1
@@ -30,7 +30,7 @@ and removes subgraphs rooted at nodes specified on the
 command line via options. These nodes themselves will not be removed,
 but can be given attributes so that they can be easily located by a
 graph stream editor such as
-.B gpr(1).
+.B gvpr(1).
 .B prune
 correctly handles cycles, loops and multi\(hyedges.
 
@@ -149,7 +149,7 @@ returns 0 on successful completion.
 It returns 1 if an error occurs.
 .SH SEE ALSO
 .BR dot (1),
-.BR gpr (1)
+.BR gvpr (1)
 
 .SH AUTHOR
 Marcus Harnisch <marcus.harnisch@gmx.net>
