Fix mm2gv to use the matrix weights.

--- a/cmd/tools/mm2gv.1
+++ b/cmd/tools/mm2gv.1
@@ -4,7 +4,7 @@ mm2gv \- Matrix Market-DOT converters
 .SH SYNOPSIS
 .B mm2gv
 [
-.B \-u?
+.B \-cluv?
 ]
 [
 .BI -o outfile
@@ -19,8 +19,22 @@ converts a sparse matrix of the Matrix Market format to a graph in the GV (forme
 .SH OPTIONS
 The following options are supported:
 .TP
+.B \-c
+This flag causes \fBmm2gv\fP to assign colors to the edges. The matrix element is scaled to the
+range [0,1] depending on where it lies between the minimum and maximum set matrix values. This
+scaled value is used as the \fI"wt"\fP attribute of the corresponding edge. 
+In addition, this scalar value is mapped to an RGB value, which is stored as the edge \fI"color"\fp.
+.TP
+.B \-l
+If set, \fBmm2gv\fP attaches a label to the graph indicating the base name of the input file,
+and the number of nodes and edges.
+.TP
 .B \-u
-If specified, the graph is assumed to be undirected. By default the graph generated is directed. 
+If specified, the graph is assumed to be undirected. By default, the graph generated is directed. 
+.TP
+.B \-v
+This flag causes \fBmm2gv\fP to store the matrix values as the \fI"len"\fP attribute of the
+corresponding edge.
 .TP
 .BI \-o "outfile"
 Prints output to the file \fIoutfile\fP. If not given, \fBmm2gv\fP
@@ -39,9 +53,9 @@ the standard input will be used.
 Return \fB0\fP
 if there were no problems during conversion;
 and non-zero if any error occurred.
-.SH "LIMITATIONS"
-Currently the matrix entry values are not used.
 .SH AUTHORS
 Yifan Hu <yifanhu@research.att.com>
+.br
+Emden R. Gansner <erg@research.att.com>
 .SH ADDITIONAL INFO
 See http://math.nist.gov/MatrixMarket/ for description of the format and http://www.cise.ufl.edu/research/sparse/matrices/ for a large collection of sparse matrices in this format.
